Sponsors are visible in player modal, various ui & model fixes

--- a/indians/static/scss/components/player-modal.scss
+++ b/indians/static/scss/components/player-modal.scss
@@ -10,31 +10,37 @@
   background: rgba(0,0,0,0.8);
   z-index: 9999;
   transition: all .4s ease-in-out;
+  @media screen and (max-width : 420px) {
+    min-height: 108vh;
+  }
 
   p {
     font-family: $titillium-web;
   }
 
-  .player-modal-container {
+  div.player-modal-container {
     height: 800px;
     position: absolute;
     z-index: 9999;
     padding: 0;
     border: solid #3E3C3B 1px;
-
+    width: 400px;
     background: black;
     transition: opacity .4s ease-in-out .4s, transform .2s ease-in-out .4s;
 
     #close {
-      float: right;
+      position: absolute;
+      right: 0;
       transform: translateY(-60px);
       font-size: 50px;
       pointer-events: none;
       @media screen and (max-width : 420px) {
-        transform: translate(-20px, -60px);
+        font-size: 40px;
+        transform: translate(-20px, -45px);
       }
       @media screen and (max-width : 360px) {
-        transform: translate(-20px, -50px);
+        font-size: 40px;
+        transform: translate(-20px, -45px);
       }
     }
 
@@ -43,7 +49,7 @@
     }
     @media screen and (max-width : 420px) {
       width: 300px;
-      height: 550px;
+      height: 600px;
     }
     @media (orientation: landscape) and (max-height : 420px) {
       height: 350px;
@@ -58,7 +64,7 @@
       }
 
       div.upper {
-        height: 70%;
+        height: 60%;
         width: 100%;
         position: relative;
         @media (max-width : 1024px) and (max-height : 800px) {
@@ -89,7 +95,6 @@
           }
           .modal-img {
             object-fit: contain;
-            width: 95%;
             max-height: 99%;
             z-index: -1;
             &.player-default {
@@ -198,6 +203,14 @@
       }
       > a {
         color: $indians-grey;
+        svg {
+          width: 40px;
+          height: 40px;
+          @media screen and (max-width: 420px){
+            width: 30px;
+            height: 30px;
+          }
+        }
         &:hover {
           svg path {
             fill: $indians-yellow;
@@ -209,7 +222,32 @@
         color: white;
       }
      }
-
+    .sponsors {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      max-width: 100%;
+      position: relative;
+      top: 35px;
+      @media screen and (max-width: 420px){
+        top: 0;
+      }
+      div {
+        width: 70px;
+        padding: 0 10px;
+        @media screen and (max-width: 420px){
+          width: 45px;
+        }
+        a {
+          margin: 0;
+          img {
+            object-fit: contain;
+            width: 100%;
+            max-height: 100%;
+          }
+        }
+      }
+    }
 
 
     .icons {
@@ -271,8 +309,8 @@
       }
     }
     &.medium {
-      width: 400px;
-      max-width: 100%;
+      max-width: 400px;
+      //max-width: 100%;
     }
     &.wide {
       width: 640px;
